--- a/Doraemon.html
+++ b/Doraemon.html
@@ -1,4 +1,4 @@
-<!--Learned from http://purecss3.net/doraemon/doraemon_css3.html-->
+<!--Retrieved from http://purecss3.net/doraemon/doraemon_css3.html-->
 
 <!doctype html>
 <html lang="en">
@@ -18,7 +18,7 @@
 			<div class="black_eye black_right"></div>
 		</div>
         <div id="base">
-		    <div id="base_white"></div>
+		  <div id="base_white"></div>
 			<div id="nose">
 			    <div id="nose_light"></div>
 			</div>
@@ -32,45 +32,45 @@
 			<div class="whiskers whi_left_top rotate20"></div>
 			<div class="whiskers whi_left"></div>
 			<div class="whiskers whi_left_bottom rotate160"></div>
-		</div>
-    </div>
+		 </div>
+        </div>
 	<div id="choker">
 	    <div id="belt"></div>
-		<div id="bell">
+	    <div id="bell">
 		    <div id="bell_line"></div>
-			<div id="bell_circle"></div>
-			<div id="bell_under"></div>
-			<div id="bell_light"></div>
-        </div>
+		    <div id="bell_circle"></div>
+		    <div id="bell_under"></div>
+		    <div id="bell_light"></div>
+            </div>
 	</div>
 	<div id="body">
 	     <div id="doutai"></div>
 		 <div class="base_white2 doutai_center"></div>
 		 <div id="pocket">
 		     <div id="circle"></div>
-			 <div id="circle_rewrite"></div>
+		     <div id="circle_rewrite"></div>
 		 </div>	
 	</div>
 	<div id="hand_right">
 	     <div id="arm_right"></div>
-		 <div class="hand_circle circle_right"></div>
-		 <div class="arm_rewrite_right"></div>
+	     <div class="hand_circle circle_right"></div>
+	     <div class="arm_rewrite_right"></div>
 	</div>
 	<div id="hand_left">
 	     <div id="arm_left"></div>
-		 <div class="hand_circle circle_left"></div>
-		 <div class="arm_rewrite_left"></div>
+	     <div class="hand_circle circle_left"></div>
+	     <div class="arm_rewrite_left"></div>
 	</div>
 	<div id="foot">
 	      <div id="foot_left"></div>
-		  <div id="foot_right"></div>
-		  <div id="foot_rewrite"></div>
+	      <div id="foot_right"></div>
+	      <div id="foot_rewrite"></div>
 	</div>
 	<div>
 	     <div id="shadow_doutai_arm"></div>
-		 <div id="shadow_doutai_left"></div>
-		 <div id="shadow_doutai_right"></div>
-		 <div id="shadow_belt"></div>
+	     <div id="shadow_doutai_left"></div>
+	     <div id="shadow_doutai_right"></div>
+	     <div id="shadow_belt"></div>
 	</div>
 </div>
 </body>
